tests/NormalTests/paczka1/small_fuzzy/13413576.err
Error in line 1: chLYx A963 0,2
Error in line 3: ZyVeCzWV S465 41,7
Error in line 6: ZyVeCzWV S757 46,5
Error in line 7: ZyVeCzWV S167 40,2
Error in line 13: 2LthAKGpuJM A963 90,3
